# e-learning-backend

./: .env.example  pyproject.toml
apps/core/: models.py
apps/user/: admin.py  manager.py  models.py
apps/user/migrations/: 0001_initial.py
config/: settings.py
