[project]
name = "e-learning-backend"
version = "0.1.0"
description = "An e-learning platform that offers a range of interactive courses, resources, and tools to help learners acquire new skills, advance their knowledge, and achieve their educational goals at their own pace."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.2",
]
